# dummy_pipeline

./: .gitignore  pyproject.toml
data_imports/: dummy.py  nba.py
data_imports/schemas/export/: dwh.schema.yaml
data_imports/schemas/import/: dwh.schema.yaml
database/: dwh.duckdb
